# aoflagger

./: AOFlagger.kdev4  CHANGELOG  CMakeLists.txt  Doxyfile.in  README  package.dox
src/: CMakeLists.txt  aoflagger.cpp  aofrequencyfilter.cpp  aoqplot.cpp  aoquality.cpp  aorefscript.cpp  aoremoteclient.cpp  aostats.cpp  aotest.cpp  badstations.cpp  baseexception.h  cleaner.cpp  cleaner.h  colormapper.cpp  createuv.cpp  f2c.h  flag.cpp  flagtest.cpp  imgzenith.cpp  ms2uv.cpp  msinfo.cpp  ns2bbs.cpp  rficonsole.cpp  rfigui.cpp  rfihistory.cpp  rfistatcollect.cpp  rfistrategy.cpp  types.h  vectortypes.h  version.h
src/gui/: addstrategyactionmenu.h  antennamapwindow.h  application.cpp  application.h  complexplaneplotwindow.cpp  complexplaneplotwindow.h  editstrategywindow.cpp  editstrategywindow.h  gotowindow.cpp  gotowindow.h  highlightwindow.cpp  highlightwindow.h  histogramwindow.h  imagecomparisonwidget.cpp  imagecomparisonwidget.h  imageplanewindow.cpp  imageplanewindow.h  imagepropertieswindow.cpp  imagepropertieswindow.h  imagewidget.cpp  imagewidget.h  interfaces.h  msoptionwindow.cpp  msoptionwindow.h  mswindow.cpp  mswindow.h  noisestatoptionwindow.cpp  noisestatoptionwindow.h  numinputdialog.h  plotframe.cpp  plotframe.h  plotwindow.cpp  plotwindow.h  progresswindow.cpp  progresswindow.h  rawoptionwindow.cpp  rawoptionwindow.h  rfiguiwindow.cpp  rfiguiwindow.h  strategywizardwindow.cpp  (+3 more)
src/gui/antennamap/: antenna.cpp  antenna.h  antennamap.cpp  antennamap.h  antennamapwidget.h  clock.h  spectrumanalyzer.h  spectrumanalyzerchannel.h
src/gui/controllers/: baselinewincontroller.h  rfiguicontroller.cpp  rfiguicontroller.h
src/gui/plot/: dimension.h  horizontalplotscale.cpp  horizontalplotscale.h  plot2d.cpp  plot2d.h  plot2dpointset.h  plotmanager.h  plotpropertieswindow.cpp  plotpropertieswindow.h  plotwidget.cpp  plotwidget.h  tickset.h
src/gui/quality/: antennaeplotpage.h  aoqplotwindow.cpp  aoqplotwindow.h  baselineplotpage.cpp  baselineplotpage.h  blengthplotpage.h  datawindow.cpp  datawindow.h  frequencyplotpage.h  grayscaleplotpage.cpp  grayscaleplotpage.h  histogrampage.cpp  histogrampage.h  openoptionswindow.h  summarypage.h  timefrequencyplotpage.cpp  timefrequencyplotpage.h  timeplotpage.h  twodimensionalplotpage.cpp  twodimensionalplotpage.h
src/gui/strategyframes/: absthresholdframe.h  baselineselectionframe.h  changeresolutionframe.h  cutareaframe.h  directionprofileframe.h  foreachbaselineframe.h  foreachcomplexcomponentframe.h  foreachmsframe.h  foreachpolarisationframe.h  frequencyconvolutionframe.h  frequencyselectionframe.h  fringestoppingframe.h  highpassfilterframe.h  iterationframe.h  plotframe.h  resamplingframe.h  setflaggingframe.h  setimageframe.h  slidingwindowfitframe.h  spatialcompositionframe.h  statisticalflaggingframe.h  sumthresholdframe.h  svdframe.h  timeconvolutionframe.h  timeselectionframe.h  uvprojectframe.h
src/imaging/: defaultmodels.h  fourproductcorrelatortester.cpp  fourproductcorrelatortester.h  model.cpp  model.h  observatorium.h  uvimager.cpp  uvimager.h  zenithimager.cpp  zenithimager.h
src/interface/: aoflagger.cpp  aoflagger.h  interface.dox
src/msio/: antennainfo.h  arraycolumniterator.h  baselinematrixloader.cpp  baselinematrixloader.h  baselinereader.cpp  baselinereader.h  colormap.cpp  colormap.h  date.h  directbaselinereader.cpp  directbaselinereader.h  fitsfile.cpp  fitsfile.h  image2d.cpp  image2d.h  indirectbaselinereader.cpp  indirectbaselinereader.h  mask2d.cpp  mask2d.h  measurementset.cpp  measurementset.h  memorybaselinereader.cpp  memorybaselinereader.h  msrowdata.h  msrowdataext.h  parmtable.h  pngfile.cpp  pngfile.h  rawdescfile.h  rawreader.h  rspreader.cpp  rspreader.h  samplerow.cpp  samplerow.h  scalarcolumniterator.h  segmentedimage.cpp  segmentedimage.h  sortedtimestepaccessor.cpp  sortedtimestepaccessor.h  spatialmatrixmetadata.h  (+14 more)
src/quality/: baselinestatisticsmap.h  defaultstatistics.h  histogramcollection.cpp  histogramcollection.h  histogramtablesformatter.cpp  histogramtablesformatter.h  loghistogram.h  qualitytablesformatter.cpp  qualitytablesformatter.h  rayleighfitter.cpp  rayleighfitter.h  statisticalvalue.h  statisticscollection.cpp  statisticscollection.h  statisticsderivator.h
src/ref/: concatenatescript.h  copyallscript.h  flagallscript.h  listnodes.h  listsets.h  reffile.h  reffileentry.h  reffileexception.h  refmovescript.h
src/remote/: client.cpp  client.h  clusteredobservation.cpp  clusteredobservation.h  format.h  nodecommandmap.h  observationtimerange.h  processcommander.cpp  processcommander.h  remoteprocess.h  server.cpp  server.h  serverconnection.cpp  serverconnection.h  vdsfile.cpp  vdsfile.h
src/strategy/actions/: absthresholdaction.h  action.h  adapter.h  addstatisticsaction.h  baselineselectionaction.cpp  baselineselectionaction.h  calibratepassbandaction.cpp  calibratepassbandaction.h  changeresolutionaction.cpp  changeresolutionaction.h  collectnoisestatisticsaction.h  combineflagresultsaction.h  cutareaaction.h  directionalcleanaction.h  directionprofileaction.h  dumpimagesaction.h  eigenvalueverticalaction.h  foreachbaselineaction.cpp  foreachbaselineaction.h  foreachcomplexcomponentaction.h  foreachmsaction.cpp  foreachmsaction.h  foreachpolarisationaction.h  foreachsimulatedbaselineaction.h  fouriertransformaction.h  frequencyconvolutionaction.h  frequencyselectionaction.cpp  frequencyselectionaction.h  fringestopaction.cpp  fringestopaction.h  highpassfilteraction.cpp  highpassfilteraction.h  imageraction.cpp  imageraction.h  iterationaction.h  normalizevarianceaction.cpp  normalizevarianceaction.h  plotaction.cpp  plotaction.h  quickcalibrateaction.h  (+24 more)
src/strategy/algorithms/: baselineselector.cpp  (+54 more)
src/util/: aologger.cpp  aologger.h  autoarray.h  compress.cpp  compress.h  ffttools.cpp  ffttools.h  integerdomain.cpp  integerdomain.h  lane.h  multiplot.cpp  multiplot.h  numberparser.h  parameter.h  plot.cpp  plot.h  progresslistener.h  rng.cpp  rng.h  roctree.cpp  roctree.h  serializable.h  statwriter.cpp  statwriter.h  types.h  xmlwriter.h
(+94 files in other folders)
